# smartentry

./: .gitignore  .travis.yml  DockerfileTemplate  LICENSE  README.md  entrypoint.sh  pyproject.toml  smartentry.sh
.github/workflows/: build.yml
ci-helpers/: build-image.sh  build.sh
scripts/: build-image.sh  build.sh
smartentry_build/: builder.py  cli.py  hub.py
tests/: test_build.py
tools/: default_env_generator.sh  get_template_variable.sh
travis-helpers/: build-image.sh  build.sh
